k8s/overlays/dev/deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: blaster
  namespace: $(kubernetes-namespace)
spec:
  template:
    spec:
      containers:
      - name: blaster
        image: localhost/blaster:dev
